Добавил в проект новую таблицу, сделал миграцию, добавил новые апи users
