# internal/handlers/userHandlers.go
@@ -1,0 +1,83 @@
+package handlers
+
+import (
+	"SecondProject/internal/userService"
+	"SecondProject/internal/web/users"
+	"context"
+)
+
+type UserHandler struct {
+	Service *userService.UserService
+}
+
+func UserNewHandler(service *userService.UserService) *UserHandler {
+	return &UserHandler{
+		Service: service,
+	}
+}
+
+func (u UserHandler) PostUsers(_ context.Context, request users.PostUsersRequestObject) (users.PostUsersResponseObject, error) {
+
+	userRequest := request.Body
+
+	userToCreate := userService.User{
+		Email:    *userRequest.Email,
+		Password: *userRequest.Password,
+	}
+	createdUser, err := u.Service.CreateUser(userToCreate)
+
+	if err != nil {
+		return nil, err
+	}
+
+	response := users.PostUsers201JSONResponse{
+		Id:       &createdUser.ID,
+		Email:    &createdUser.Email,
+		Password: &createdUser.Password,
+	}
+	return response, nil
+}
+
+func (u UserHandler) DeleteUsersId(ctx context.Context, request users.DeleteUsersIdRequestObject) (users.DeleteUsersIdResponseObject, error) {
+	id := request.Id
+
+	_, err := u.Service.DeleteUserByID(uint(id))
+
+	if err != nil {
+		return nil, err
+	}
+	return nil, err
+}
+
+func (u UserHandler) PatchUsersId(ctx context.Context, request users.PatchUsersIdRequestObject) (users.PatchUsersIdResponseObject, error) {
+	updatedUser, err := u.Service.UpdateUserByID(uint(request.Id), request.Body)
+	if err != nil {
+		return nil, err
+	}
+
+	response := users.PatchUsersId200JSONResponse{
+		Id:       &updatedUser.ID,
+		Email:    &updatedUser.Email,
+		Password: &updatedUser.Password,
+	}
+	return response, nil
+}
+
+func (u UserHandler) GetUsers(_ context.Context, _ users.GetUsersRequestObject) (users.GetUsersResponseObject, error) {
+	allUser, err := u.Service.GetAllUsers()
+	if err != nil {
+		return nil, err
+	}
+
+	response := users.GetUsers200JSONResponse{}
+
+	for _, usr := range allUser {
+		user := users.User{
+			Id:       &usr.ID,
+			Email:    &usr.Email,
+			Password: &usr.Password,
+		}
+		response = append(response, user)
+	}
+	return response, nil
+}
